# kcmc_2021

./: .dockerignore  .env  .gitignore  CMakeLists.txt  DOCKERFILE  Example.md  Example2.md  LICENSE  compiler.dockerfile  deploy.sh  docker-compose.yml  environment.cfm  gurobi.dockerfile  instance_generator.dockerfile  jupyter.sh  notebook.dockerfile  run_fargate.sh
analysis/: AA TREAT RESULTS.ipynb  COMPARE ILP MODELS AND EVALUATOR.ipynb  DEV EVALUATOR-Copy1.ipynb  EDA GUPTA.ipynb  EDA.ipynb  FS COMPARE ILP MODELS AND EVALUATOR.ipynb  Get Results From S3.ipynb  INSTANCES EDA.ipynb  Integer-Linear Programs.ipynb  JAN 2022 RESULTS.ipynb  KCMC ILP - FLOW.ipynb  KCMC ILP MULTI-FLOW.ipynb  KCMC Integer Linear Programs.ipynb  OPTIMIZER - GUPTA ADAPTED.ipynb  OPTIMIZER - GUPTA EXACT.ipynb  POC Gurobi Results.ipynb  Parse Instances as Parquet.ipynb  Parse Results.ipynb  Prepare Results.ipynb  RESULTS EDA.ipynb  RESULTS PARSING.ipynb  Render Instances Visualization.ipynb  Results Analysis.ipynb  TEST EVALUATORS.ipynb  Untitled.ipynb  Untitled1.ipynb  aggregated_data.xlsx  docker-compose.yml
analysis/results/optimizer/: optimizer_dbfs.csv
analysis/results/preprocessor/: optimizer_dinic.csv
data/: certificates.parquet  demo.csv  heuristically_optimized_instances.csv  instance_generator_configurations.csv  instances.10.csv  instances.50.csv  instances.csv  optimized_instances.csv  random_seeds.txt  redis.conf
data/parsed_results/: 0.pq  1.pq  2.pq  3.pq  4.pq  5.pq  6.pq  7.pq
dataviz/: index.html
deprecated/: optimizer_gupta_adapted.cpp  optimizer_gupta_exact.cpp
heuristics/: instance_classes.csv  instance_regenerator.cpp  instances_generator.cpp  k_coverage.cpp  kcmc_instance.cpp  kcmc_instance.h  m_connectivity.cpp  optimizer.cpp  optimizer_runtime.cpp  run_heuristics.sh  run_instances_generator.sh
integer_linear_programs/: experiment.py  gurobi_experiment.py  gurobi_models.py  kcmc_instance.py  main.py  run_gurobi.sh
src/: compiler_entrypoint.sh  dynamodb_lock.py  filelock.py  genetic_algorithm_operators.cpp  genetic_algorithm_operators.h  gurobi_driver.sh  gurobi_model_wrapper.py  gurobi_models.py  gurobi_optimizer.py  instance_evaluator.cpp  instance_generator.cpp  instance_generator_driver.py  instances_pump.py  k_coverage.cpp  kcmc_components.cpp  kcmc_components.h  kcmc_instance.cpp  kcmc_instance.h  kcmc_instance.py  kcmc_m_connectivity_validator.cpp  m_connectivity.cpp  optimizer.cpp  optimizer_binary_genalg.cpp  optimizer_dbfs.cpp  optimizer_dinic.cpp  optimizer_gupta.cpp  optimizer_gupta_adapted.cpp  optimizer_gupta_exact.cpp  optimizer_runtime.cpp  parse_results.py  photogenic_instance_generator.cpp  placements_visualizer.cpp  run_instance_generator.sh  run_instance_generator_failsafe.sh  run_optimizer.sh  run_optimizer_dbfs.sh  run_optimizer_dinic.sh  run_optimizer_genalg_binary.sh  setup_host.sh
